fix spacing, fix homepage

--- a/src/global.scss
+++ b/src/global.scss
@@ -5,8 +5,6 @@ html, body {
 }
 
 body {
-  max-width: 1400px;
-  margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
